# ocaml-xdg-basedir

./: .boring  .gitignore  AUTHORS.txt  CHANGES.md  INSTALL.txt  Makefile  README.md  README.txt  _headache.config  _header  _oasis  _tags  ci-main.lua  dune-project  myocamlbuild.ml  setup.ml  xdg-basedir.opam  xdg_basedir.opam
.github/workflows/: main.yml
src/: META  XDGBaseDir.ml  XDGBaseDir.mli  dune  xdg-basedir.mldylib  xdg-basedir.mllib  xdg_basedir.ml
test/: dune  test.ml
